--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "joi": "17.4.0",
     "lowdb": "^1.0.0",
     "morgan": "1.10.0",
-    "uuid": "8.3.2"
+    "dotenv": "8.2.0",
+    "mongoose": "5.11.18"
   },
   "devDependencies": {
     "eslint": "^7.19.0",
