--- a/package.json
+++ b/package.json
@@ -15,9 +15,16 @@
     "express": "4.17.1",
     "joi": "17.4.0",
     "lowdb": "^1.0.0",
-    "morgan": "1.10.0",
     "dotenv": "8.2.0",
-    "mongoose": "5.11.18"
+    "mongoose": "5.11.18",
+    "bcryptjs": "2.4.3",
+    "express-rate-limit": "5.2.6",
+    "helmet": "4.4.1",
+    "jsonwebtoken": "8.5.1",
+    "mongoose-paginate-v2": "1.3.16",
+    "morgan": "1.10.0",
+    "passport": "0.4.1",
+    "passport-jwt": "4.0.0"
   },
   "devDependencies": {
     "eslint": "^7.19.0",
